--- a/01_data_collection.ipynb
+++ b/01_data_collection.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Notebook 01 - Data Collection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Task 1\n",
     "\n",
     "---\n",
@@ -21,18 +28,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Provided code for imports\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "# Added code for imports\n",
+    "import os\n",
+    "import stat\n",
+    "import shutil"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*The following cell is provided in full*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -90,8 +109,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*The following cell is provided in full*"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -121,23 +147,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Not Verified |  LHR-LAX. I prefer the Boeing 7...</td>\n",
+       "      <td>Not Verified |  Extremely rude ground service....</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>✅ Trip Verified |  Flew back to UK from Miami ...</td>\n",
+       "      <td>✅ Trip Verified |  My son and I flew to Geneva...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>✅ Trip Verified |  I flew with hand baggage bu...</td>\n",
+       "      <td>✅ Trip Verified |  For the price paid (bought ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Not Verified | London to Cairo. First, on this...</td>\n",
+       "      <td>✅ Trip Verified |  Flight left on time and arr...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>✅ Trip Verified |  This review is specifically...</td>\n",
+       "      <td>✅ Trip Verified |  Very Poor Business class pr...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -145,14 +171,14 @@
       ],
       "text/plain": [
        "                                             reviews\n",
-       "0  Not Verified |  LHR-LAX. I prefer the Boeing 7...\n",
-       "1  ✅ Trip Verified |  Flew back to UK from Miami ...\n",
-       "2  ✅ Trip Verified |  I flew with hand baggage bu...\n",
-       "3  Not Verified | London to Cairo. First, on this...\n",
-       "4  ✅ Trip Verified |  This review is specifically..."
+       "0  Not Verified |  Extremely rude ground service....\n",
+       "1  ✅ Trip Verified |  My son and I flew to Geneva...\n",
+       "2  ✅ Trip Verified |  For the price paid (bought ...\n",
+       "3  ✅ Trip Verified |  Flight left on time and arr...\n",
+       "4  ✅ Trip Verified |  Very Poor Business class pr..."
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,11 +191,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[WinError 183] Cannot create a file when that file already exists: 'data'\n"
+     ]
+    }
+   ],
    "source": [
-    "df.to_csv(\"data/BA_reviews.csv\")"
+    "# I added the try / except block to create the 'data' folder.\n",
+    "# If there is an error (eg if the folder already exists), this\n",
+    "# will be caught by the 'except' part\n",
+    "try:\n",
+    "  os.makedirs(name='data')\n",
+    "except Exception as e:\n",
+    "  print(e)\n",
+    "\n",
+    "df.to_csv(\"data/BA_reviews.csv\", index=False)"
    ]
   },
   {
@@ -182,11 +224,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "*The steps above will be addressed in the next notebook*"
+   ]
   }
  ],
  "metadata": {
@@ -205,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.12"
   },
   "orig_nbformat": 4,
   "vscode": {
